cria diretorio para metodo principal